Handle GType properties correctly

Fix conversion from/to properties of type G_TYPE_GTYPE

https://bugzilla.gnome.org/show_bug.cgi?id=674351

Signed-off-by: Martin Pitt <martinpitt@gnome.org>